jumping on balloon work but still buggy in path limiting

--- a/games/balloon/gameBalloonOfficial.css
+++ b/games/balloon/gameBalloonOfficial.css
@@ -13,8 +13,8 @@ body {
 
 .walking-direction {
     position: absolute;
-    left: 5%;
-    top: 23%;
+    left: 70%;
+    top: 15%;
     padding: 8px 20px; 
     background-color: #A8D0CE; 
     border-radius: 8px;
